<resources>
    <string name="app_name">LightCaring</string>
    <string name="ip_format">255.255.255.255</string>
    <string name="user_name">User name</string>
    <string name="phone">13077790403</string>

    <string name="input_hint"></string>
    <string name="inform">This is an inform</string>
    <string name="chat_msg">This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.This is a chat message.</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_personal_settings">个人设置</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_home">主页</string>
    <string name="navigation_logout">注销</string>
    <string name="navigation_return">退出</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="Voice_Communication">语音通话</string>
    <string name="Drop_Detection">跌倒检测</string>
    <string name="Trajectory_Tracking">轨迹跟踪</string>
    <string name="Domestic_Service">家政服务</string>
    <string name="Drug_Reminding">吃药提醒</string>
    <string name="More">更多</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="server_ip">
        <item>120.78.148.180</item>
        <item>39.108.74.14</item>
        <item>其它</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="retrieve_alarm_clock_success">被删除的闹钟已成功找回</string>
    <string name="roger">知道了</string>
    <string name="warm_tips_title">温馨提示</string>
    <string name="warm_tips_detail">亲，由于Android系统限制，如不响铃，可能是如下原因：\n
    1.闹钟未被加入安全软件的应用保护名单\n
    2.闹钟后台已被安全类软件误清理\n
    3.软件安装在SD卡\n
    4.关机</string>
    
    <string name="about_function">功能介绍：\n
        &#160; &#160;&#160; &#160;本应用针对需要护理照料的人，比如老人，小孩，残疾人等，为他们提供方便快捷的服务，为他们的人生安全提供保障。\n
        &#160; &#160;&#160; &#160;监护人可以方便的了解被监护人的位置状态，防止走失；可以远程设置被监护人的服药提醒功能以及注意事项；
        被监护人可以通过应用，一键呼救，向监护人发送位置及语音信息等；
        在考虑特殊人群的使用方便上，被监护人客户端可以不用进行任何操作，监护人的移动端就可以随时进行远程设置，定位等功能。\n</string>
    <string name="no_tip">不再提示</string>
    <string name="repeat">重复</string>
    <string name="repeat_once">只响一次</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="tag">药品</string>
    <string name="alarm_clock">闹钟</string>
    <string name="ring">铃声</string>
    <string name="default_ring">默认铃声</string>
    <string name="volume">音量</string>
    <string name="vibrate">振动</string>
    <string name="nap">休息</string>
    <string name="edit_alarm_clock">编辑闹钟</string>
    <string name="one_h">一</string>
    <string name="two_h">二</string>
    <string name="three_h">三</string>
    <string name="four_h">四</string>
    <string name="five_h">五</string>
    <string name="six_h">六</string>
    <string name="day">日</string>
    <string name="every_day">每天</string>
    <string name="week_day">平日</string>
    <string name="week_end">周末</string>
    <string name="week">周</string>
    <string name="caesura">、</string>
    <string name="countdown_day_hour_minute">距闹钟响起还有%1$d天%2$d小时%3$d分</string>
    <string name="countdown_hour_minute">距闹钟响起还有%1$d小时%2$d分</string>
    <string name="countdown_minute">距闹钟响起还有%1$d分钟</string>
    <string name="new_alarm_clock">新建闹钟</string>

    <!-- 音频播放 -->
    <string name="play_fail">播放失败</string>



    <!-- 闹钟响起界面 -->
    <string name="touch_here_nap">轻按此处休息%1$d分钟</string>
    <string name="close_alarm_clock">右滑关闭闹钟</string>
    <string name="xx_naping">%1$s (休息中……)</string>
    <string name="nap_to">休息至%1$s闹钟再次响起，轻触取消</string>
    <string name="nap_time">休息%1$d分钟</string>
    <string name="weather_type">%1$s&#160;%2$s~%3$s℃</string>
    <string name="bring_an_umbrella">带伞</string>
    <string name="alarm_error">未知闹钟异常</string>
</resources>
