<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/card_normal"
    android:orientation="vertical">

    <!--TODO 这部分界面的按钮不能都固定-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card:card_name="@string/Voice_Communication"
                card:card_image="@drawable/ic_voice_communication" />

        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000" />

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card:card_name="@string/Drop_Detection"
                card:card_image="@drawable/ic_drop_detection" />
        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000" />

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card:card_name="@string/Drug_Reminding"
                card:card_image="@drawable/ic_drug_reminding" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/ic_trajectory_tracking"
                card:card_name="@string/Trajectory_Tracking"/>

        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000"/>

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/ic_domestic_service"
                card:card_name="@string/Domestic_Service"/>

        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000"/>

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">

            <com.carefor.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/ic_sos"
                card:card_name="@string/More"/>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />



</LinearLayout>